--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:1.17
-COPY ./nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY ./conf.d/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
